Bug 1407058 - Fix isDataProperty to return false for accessors with nullptr getter/setter. r=evilpie